--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,7 +113,7 @@ nav {
   }
 
   nav {
-    background-color: white;
+    display: none;
   }
 }
 
@@ -164,8 +164,14 @@ nav {
   }
 }
 
-@media screen and (max-width: 485px) {
+@media screen and (max-width: 457px) {
   .directory {
-    width: 52%;
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .directory {
+    width: 100%;
   }
 }
