--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,16 +63,145 @@ nav {
   transition: all 0.4s ease;
 }
 
-.main-content {
+.mainbody {
+  background: #ccb259;
   padding: 50px;
+  padding-top: 50px;
   display: grid;
-  grid-template-columns: 100px 100px 100px;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: auto 300px 300px 300px auto;
+  grid-template-rows: auto 150px 30px 20px 150px 30px 20px 150px 30px 20px auto;
 }
 
-.item-class {
-  grid-row: 1;
-  grid-column: 1;
+.mainbody a {
+  text-decoration: none;
+  color: black;
+  background-color: #d7ddc7;
+}
+
+.philips-tv {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: center;
+}
+
+.asus {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 3;
+  grid-row: 2;
+  justify-self: center;
+}
+
+.bose {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 4;
+  grid-row: 2;
+  justify-self: center;
+}
+
+.sony {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 2;
+  grid-row: 5;
+  justify-self: center;
+}
+
+.huawei {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 3;
+  grid-row: 5;
+  justify-self: center;
+}
+
+.logitech {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 4;
+  grid-row: 5;
+  justify-self: center;
+}
+
+.ryzen {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 2;
+  grid-row: 8;
+  justify-self: center;
+}
+
+.gopro {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 3;
+  grid-row: 8;
+  justify-self: center;
+}
+
+.fractal {
+  max-height: 300px;
+  max-width: 150px;
+  grid-column: 4;
+  grid-row: 8;
+  justify-self: center;
+}
+
+.philips-text {
+  grid-column: 2;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.asus-text {
+  grid-column: 3;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.bose-text {
+  grid-column: 4;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.sony-text {
+  grid-column: 2;
+  grid-row: 6;
+  justify-self: center;
+}
+
+.huawei-text {
+  grid-column: 3;
+  grid-row: 6;
+  justify-self: center;
+}
+
+.mxmaster-text {
+  grid-column: 4;
+  grid-row: 6;
+  justify-self: center;
+}
+
+.ryzen-text {
+  grid-column: 2;
+  grid-row: 9;
+  justify-self: center;
+}
+
+.gopro-text {
+  grid-column: 3;
+  grid-row: 9;
+  justify-self: center;
+}
+
+.fractal-text {
+  grid-column: 4;
+  grid-row: 9;
+  justify-self: center;
 }
 
 .directory-active {
@@ -112,8 +241,8 @@ nav {
     display: block;
   }
 
-  nav {
-    opacity: ;
+  .ognav {
+    background-color: #ccb259;
   }
 }
 
