--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,10 +40,15 @@ nav {
   text-decoration: none;
   letter-spacing: 1px;
   font-size: 13pt;
+  transition: 0.4s;
 }
 
 .directory li {
   list-style: none;
+}
+
+.directory a:hover {
+  font-size: 16pt;
 }
 
 .burger {
@@ -63,10 +68,11 @@ nav {
   transition: all 0.4s ease;
 }
 
+/*Den första main bodyn*/
+
 .mainbody {
   background: #ccb259;
   padding: 50px;
-  padding-top: 50px;
   display: grid;
   grid-template-columns: auto 300px 300px 300px auto;
   grid-template-rows: auto 150px 30px 20px 150px 30px 20px 150px 30px 20px auto;
@@ -76,6 +82,62 @@ nav {
   text-decoration: none;
   color: black;
   background-color: #d7ddc7;
+  font-family: "Roboto Slab", serif;
+  font-size: 10.8pt;
+  transition: 0.4s;
+}
+
+.mainbody a:hover {
+  background-color: black;
+  color: #d7ddc7;
+}
+
+/*Den andra main bodyn*/
+
+.mainbody2 {
+  background: #ccb259;
+  padding: 50px;
+  display: none;
+  grid-template-columns: auto 300px 300px auto;
+  grid-template-rows: auto 150px 30px 20px 150px 30px 20px 150px 30px 20px auto;
+}
+
+.mainbody2 a {
+  text-decoration: none;
+  color: black;
+  background-color: #d7ddc7;
+  font-family: "Roboto Slab", serif;
+  font-size: 10.8pt;
+  transition: 0.4s;
+}
+
+.mainbody2 a:hover {
+  background-color: black;
+  color: #d7ddc7;
+}
+
+/*Den tredje main bodyn*/
+
+.mainbody3 {
+  background: #ccb259;
+  padding: 50px;
+  display: none;
+  grid-template-columns: auto 300px auto;
+  grid-template-rows: auto 150px 30px 20px 150px 30px 20px 150px 30px 20px auto;
+}
+
+.mainbody3 a {
+  text-decoration: none;
+  color: black;
+  background-color: #d7ddc7;
+  font-family: "Roboto Slab", serif;
+  font-size: 10.8pt;
+  transition: 0.4s;
+}
+
+.mainbody3 a:hover {
+  background-color: black;
+  color: #d7ddc7;
 }
 
 .philips-tv {
@@ -84,6 +146,7 @@ nav {
   grid-column: 2;
   grid-row: 2;
   justify-self: center;
+  align-self: center;
 }
 
 .asus {
@@ -92,6 +155,7 @@ nav {
   grid-column: 3;
   grid-row: 2;
   justify-self: center;
+  align-self: center;
 }
 
 .bose {
@@ -100,6 +164,7 @@ nav {
   grid-column: 4;
   grid-row: 2;
   justify-self: center;
+  align-self: center;
 }
 
 .sony {
@@ -108,6 +173,7 @@ nav {
   grid-column: 2;
   grid-row: 5;
   justify-self: center;
+  align-self: center;
 }
 
 .huawei {
@@ -116,6 +182,7 @@ nav {
   grid-column: 3;
   grid-row: 5;
   justify-self: center;
+  align-self: center;
 }
 
 .logitech {
@@ -124,6 +191,7 @@ nav {
   grid-column: 4;
   grid-row: 5;
   justify-self: center;
+  align-self: center;
 }
 
 .ryzen {
@@ -132,6 +200,7 @@ nav {
   grid-column: 2;
   grid-row: 8;
   justify-self: center;
+  align-self: center;
 }
 
 .gopro {
@@ -140,6 +209,7 @@ nav {
   grid-column: 3;
   grid-row: 8;
   justify-self: center;
+  align-self: center;
 }
 
 .fractal {
@@ -148,60 +218,115 @@ nav {
   grid-column: 4;
   grid-row: 8;
   justify-self: center;
+  align-self: center;
 }
 
 .philips-text {
   grid-column: 2;
   grid-row: 3;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 40px;
+  padding-left: 40px;
+  border-radius: 5px;
 }
 
 .asus-text {
   grid-column: 3;
   grid-row: 3;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 17px;
+  padding-left: 17px;
+  border-radius: 5px;
 }
 
 .bose-text {
   grid-column: 4;
   grid-row: 3;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 9px;
+  padding-left: 9px;
+  border-radius: 5px;
 }
 
 .sony-text {
   grid-column: 2;
   grid-row: 6;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 50px;
+  padding-left: 50px;
+  border-radius: 5px;
 }
 
 .huawei-text {
   grid-column: 3;
   grid-row: 6;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 14px;
+  padding-left: 14px;
+  border-radius: 5px;
 }
 
 .mxmaster-text {
   grid-column: 4;
   grid-row: 6;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 35px;
+  padding-left: 35px;
+  border-radius: 5px;
 }
 
 .ryzen-text {
   grid-column: 2;
   grid-row: 9;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border-radius: 5px;
 }
 
 .gopro-text {
   grid-column: 3;
   grid-row: 9;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border-radius: 5px;
 }
 
 .fractal-text {
   grid-column: 4;
   grid-row: 9;
   justify-self: center;
+  align-self: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border-radius: 5px;
 }
 
 .directory-active {
@@ -243,6 +368,28 @@ nav {
 
   .ognav {
     background-color: #ccb259;
+  }
+}
+
+/*Media querys för mina flera body's*/
+
+@media screen and (max-width: 950px) {
+  .mainbody {
+    display: none;
+  }
+
+  .mainbody2 {
+    display: grid;
+  }
+}
+
+@media screen and (max-width: 646px) {
+  .mainbody2 {
+    display: none;
+  }
+
+  .mainbody3 {
+    display: grid;
   }
 }
 
