--- a/datorkomponenterstyle.css
+++ b/datorkomponenterstyle.css
@@ -1,16 +1,12 @@
-.tvmediakamera {
-  font-weight: bold;
-}
-
-.mainbody4 {
+.mainbody5 {
   background: #ccb259;
   padding: 50px;
   display: grid;
-  grid-template-columns: auto 300px 300px auto;
-  grid-template-rows: auto 150px 30px 20px 150px 30px 20px auto;
+  grid-template-columns: auto 300px auto;
+  grid-template-rows: auto 150px 30px 20px 150px 30px 20px 150px 30px 20px auto;
 }
 
-.mainbody4 a {
+.mainbody5 a {
   text-decoration: none;
   color: black;
   background-color: #d7ddc7;
@@ -19,12 +15,16 @@
   transition: 0.4s;
 }
 
-.mainbody4 a:hover {
+.mainbody5 a:hover {
   background-color: black;
   color: #d7ddc7;
 }
 
-.philips-tv2 {
+.datorkomp {
+  font-weight: bold;
+}
+
+.asus3 {
   max-height: 300px;
   max-width: 150px;
   grid-column: 2;
@@ -33,16 +33,7 @@
   align-self: center;
 }
 
-.bose2 {
-  max-height: 300px;
-  max-width: 150px;
-  grid-column: 3;
-  grid-row: 2;
-  justify-self: center;
-  align-self: center;
-}
-
-.sony2 {
+.ryzen3 {
   max-height: 300px;
   max-width: 150px;
   grid-column: 2;
@@ -51,54 +42,41 @@
   align-self: center;
 }
 
-.gopro2 {
+.fractal3 {
   max-height: 300px;
   max-width: 150px;
-  grid-column: 3;
-  grid-row: 5;
+  grid-column: 2;
+  grid-row: 8;
   justify-self: center;
   align-self: center;
 }
-
-.philips-text2 {
+.asus-text3 {
   grid-column: 2;
   grid-row: 3;
   justify-self: center;
   align-self: center;
   padding-top: 6px;
   padding-bottom: 6px;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-right: 30px;
+  padding-left: 30px;
   border-radius: 5px;
 }
 
-.bose-text2 {
-  grid-column: 3;
-  grid-row: 3;
-  justify-self: center;
-  align-self: center;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-right: 9px;
-  padding-left: 9px;
-  border-radius: 5px;
-}
-
-.sony-text2 {
+.ryzen-text3 {
   grid-column: 2;
   grid-row: 6;
   justify-self: center;
   align-self: center;
   padding-top: 6px;
   padding-bottom: 6px;
-  padding-right: 50px;
-  padding-left: 50px;
+  padding-right: 30px;
+  padding-left: 30px;
   border-radius: 5px;
 }
 
-.gopro-text2 {
-  grid-column: 3;
-  grid-row: 6;
+.fractal-text3 {
+  grid-column: 2;
+  grid-row: 9;
   justify-self: center;
   align-self: center;
   padding-top: 6px;
