--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,10 @@ html {
 .title {
   font-size: 20pt;
   letter-spacing: 8px;
+}
+
+.title a {
+  text-decoration: none;
   color: whitesmoke;
 }
 
@@ -162,7 +166,7 @@ nav {
   grid-row: auto;
   justify-self: center;
   align-self: center;
-  height: 100vw;
+  height: 50vw;
 }
 
 .fotterbody li {
